Galery height fix.

--- a/tenderi-pretraga.html
+++ b/tenderi-pretraga.html
@@ -397,24 +397,27 @@
                                                 <i class="val fa fa-caret-up" aria-hidden="true"></i>
                                                 <i class="val fa fa-caret-down" aria-hidden="true"></i>
                                             </span>
-                                        <select class="form-control" placeholder="CPV kod">
+                                        <input class="form-control typeahead" placeholder="CPV kod" />
+                                        <span class="tooltipHolder"><a title="@VarijablaHtmlFormatirana" data-html="true" rel="tooltip" href="#"><i class="fa fa-info-circle"></i></a></span>
+                                        <!--   <select class="form-control" placeholder="CPV kod">
                                             <option value="0" selected disabled>CPV kod</option>
                                             <option value="1">1</option>
                                             <option value="2">2</option>
                                             <option value="3">3</option>
-                                            </select>
+                                            </select> -->
                                     </div>
                                     <div class="col-sm-3 ">
                                         <span class="form-control-feedback valuebox">
                                                 <i class="val fa fa-caret-up" aria-hidden="true"></i>
                                                 <i class="val fa fa-caret-down" aria-hidden="true"></i>
                                             </span>
-                                        <select class="form-control" placeholder="Država">
+                                        <input class="form-control typeahead" placeholder="Država" />
+                                        <!--  <select class="form-control" placeholder="Država">
                                             <option value="država" disabled selected>Država</option>
                                             <option value="bih">BiH</option>
                                             <option value="ostale">ostale</option>
                                             <option value="sve">sve</option>
-                                            </select>
+                                            </select> -->
                                     </div>
                                     <div class="col-sm-3 ">
                                         <span class="form-control-feedback valuebox">
@@ -1062,6 +1065,7 @@
     <script src="./js/imagesLoaded.js"></script>
     <script src="./js/masonry.js"></script>
     <script src="./js/main.js"></script>
+    <script src="./js/bootstrap3-typeahead.min.js"></script>
 </body>
 
 </html>
