--- a/tenderi-single.html
+++ b/tenderi-single.html
@@ -319,7 +319,7 @@
     </div>
 
     <!-- MAIN BODY -->
-    <section class="main_body_contents single_article">
+    <section class="main_body_contents single_article ">
         <div class="container">
 
             <div class="wrapper-vijesti remargin">
@@ -340,37 +340,90 @@
                 <div class="col-md-12 row-istih-visina nopadding">
                     <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 card ">
                         <div class="card-opis-vijesti">
-                            <p class="card-kategorija">Objavljeni tenderi</p>
-                            <h1 class="card-naslov-vijesti">Najveća baza tendera</h1>
+                            <p class="card-kategorija tenderi">Objavljeni tenderi</p>
+                            <h1 class="card-naslov-vijesti">Nabavka računarske opreme za potrebe Univerziteta u Banja Luci</h1>
                             <div class="separator"></div>
-                            <div id="popover-content1" class="hide">
-                                <ul class="popovermenu">
-                                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
-                                </ul>
-                            </div>
+
                             <span class="vijestiInfo">
-                                <span class="datumVijesti">15.01.2017. 23:47:01</span> / <span class="autorVijesti">Izvor:</span> <span id="izvorVijesti">Izvor Vijesti</span>
+                                <span class="datumVijesti">15.01.2017. 23:47:01</span> / <span class="autorVijesti">Izvor:</span> <span id="izvorVijesti"> newssource.ba</span>
                             </span>
                             <span class="toolbarIcons">
-                                   
-                                 <a tabindex="0" class=" vijestOutreachIcon" role="button" data-toggle="popover" data-trigger="focus" data-placement="top" data-style="mypops" id="Pops1"><i class="fa fa-share-alt" aria-hidden="true" ></i></a>
-                                <span class="count">12345</span>
                             <i class="fa fa-print" aria-hidden="true"></i>
                             <i class="fa fa-bookmark" aria-hidden="true"></i>
                             </span>
                             <div class="separator"></div>
-                            <p><b>Tražite najnovije tendere? Želite objaviti tender?</b> <br>Na pravom ste mjestu! Akta tim Vam nudi najbolje mogućnosti za Vaše bolje poslovanje. Detaljna pretraga vam omogućava da nađete tendere koji najviše odgovaraju vašim
-                                potrebama.
+                            <p class="sadrzajVijesti">
+                                <b id="datumObjave">Datum objave : 1.07.2017.</b>
                                 <br>
-                                <span style="color:#00B496;"><b>Registrujte se i testirajte besplatno</b></span> sve mogućnosti koje nudimo.</p>
+                                <b id="naslovObjave">Obavještenje o nabavci</b>
+                                <br>
+                                <b id="brojObjave">8621-1-1-6-9-3/48</b>
+
+
+                                <b>Lorem ipsum</b>
+                                <br> <br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In nec cursus lacus. Maecenas sagittis est purus, vel porta arcu posuere sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus dictum
+                                dolor, id suscipit erat lacinia ut. Cras et lorem at diam egestas condimentum. Morbi odio mauris, interdum a mauris quis, accumsan tristique nisl. Phasellus sed imperdiet dui.
+                                <br><br>
+                                <b>Lorem ipsum</b>
+                                <br><br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In nec cursus lacus. Maecenas sagittis est purus, vel porta arcu posuere sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus dictum
+                                dolor, id suscipit erat lacinia ut. Cras et lorem at diam egestas condimentum. Morbi odio mauris, interdum a mauris quis, accumsan tristique nisl. Phasellus sed imperdiet dui.
+                                <br><br>
+                                <b>Lorem ipsum</b>
+                                <br><br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In nec cursus lacus. Maecenas sagittis est purus, vel porta arcu posuere sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus dictum
+                                dolor, id suscipit erat lacinia ut. Cras et lorem at diam egestas condimentum. Morbi odio mauris, interdum a mauris quis, accumsan tristique nisl. Phasellus sed imperdiet dui.
+                                <br><br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In nec cursus lacus. Maecenas sagittis est purus, vel porta arcu posuere sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus dictum
+                                dolor, id suscipit erat lacinia ut. Cras et lorem at diam egestas condimentum. Morbi odio mauris, interdum a mauris quis, accumsan tristique nisl. Phasellus sed imperdiet dui.
+                                <br><br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In nec cursus lacus. Maecenas sagittis est purus, vel porta arcu posuere sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus dictum
+                                dolor, id suscipit erat lacinia ut. Cras et lorem at diam egestas condimentum. Morbi odio mauris, interdum a mauris quis, accumsan tristique nisl. Phasellus sed imperdiet dui.
+                                <!-- Text za detaljni prikaz mora biti unutar taga span sa klasom 'viseTeksta' -->
+                                <span class="viseTeksta">
+                                    <br><br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In nec cursus lacus. Maecenas sagittis est purus, vel porta arcu posuere sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus dictum
+                                    dolor, id suscipit erat lacinia ut. Cras et lorem at diam egestas condimentum. Morbi odio mauris, interdum a mauris quis, accumsan tristique nisl. Phasellus sed imperdiet dui.
+                                    <br><br>
+                                    <b>Lorem ipsum</b>
+                                    <br><br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In nec cursus lacus. Maecenas sagittis est purus, vel porta arcu posuere sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus dictum
+                                    dolor, id suscipit erat lacinia ut. Cras et lorem at diam egestas condimentum. Morbi odio mauris, interdum a mauris quis, accumsan tristique nisl. Phasellus sed imperdiet dui.
+                                    <br><br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In nec cursus lacus. Maecenas sagittis est purus, vel porta arcu posuere sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus dictum
+                                    dolor, id suscipit erat lacinia ut. Cras et lorem at diam egestas condimentum. Morbi odio mauris, interdum a mauris quis, accumsan tristique nisl. Phasellus sed imperdiet dui.
+                                    <br><br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In nec cursus lacus. Maecenas sagittis est purus, vel porta arcu posuere sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus dictum
+                                    dolor, id suscipit erat lacinia ut. Cras et lorem at diam egestas condimentum. Morbi odio mauris, interdum a mauris quis, accumsan tristique nisl. Phasellus sed imperdiet dui.
+                               </span>
+                            </p>
+                            <p class="tekstSwitch"><span id="prikaziViseManje">PRIKAŽI VIŠE TEKSTA <i class="fa fa-angle-double-down" aria-hidden="true"></i></span></p>
+                            <div class="separator"></div>
+                            <span class="preuzmiDoc tenderi">PREUZMI DOKUMENT:</span>
+                            <a id="preuzimanjeDokumenta" class="docDownload">nazivdokumenta.pdf</a>
+                            <div class="separator"></div>
+                            <div class="bottomToolbar">
+                                <div id="popover-content" class="hide">
+                                    <ul class="popovermenu">
+                                        <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
+                                    </ul>
+                                </div>
+                                <span class="preuzmiDoc tenderi">PODIJELI:  </span>
+                                <a tabindex="0" class=" vijestOutreachIcon" role="button" data-toggle="popover" data-trigger="focus" data-placement="top" data-style="mypops" id="Pops"><i class="fa fa-share-alt" aria-hidden="true" ></i></a>
+                                <span class="count">12345</span>
+                                <i class="fa fa-print" aria-hidden="true"></i> <span class="preuzmiDoc tenderi">SAČUVAJ:</span>
+                                <i class="fa fa-bookmark" aria-hidden="true"></i>
+                                <br><br>
+                                <span class="preuzmiDoc tenderi">TAGOVI:  </span><span class="count tag">
+                                    <a class="tenderi">Vijesti</a>
+                                    <a class="tenderi">Investicije</a>
+                                    <a class="tenderi">Svijet</a>
+                                    <a class="tenderi">Konzum</a>
+                                    <a class="tenderi">Prodaja</a>
+                                    </span>
+                            </div>
+                            <div class="separator"></div>
+
                         </div>
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-4 kolona-najcitanije ">
-                        <h1 class="naslov-kolone ">Ostale vijesti iz rubrike</h1>
+                        <h1 class="naslov-kolone ">Najnovije vijsti</h1>
                         <div class="wrap-najcitanije remargin">
 
                             <div class="col-xs-12 col-sm-6 col-md-12 card ">
