--- a/potkategorije.html
+++ b/potkategorije.html
@@ -415,27 +415,21 @@
     <!-- MAIN BODY -->
     <section class="main_body_contents">
         <div class="container">
-            <!-- Scroller vijesti -->
-            <div class="skroler-novosti-modul">
+            <div class="skroler-novosti-modul ">
                 <div class="news-label">Najnovije</div>
-                <div id="skroler-novosti" class="carousel fdi-Carousel slide">
-
-                    <div class="carousel fdi-Carousel slide" id="eventCarousel" data-interval="0">
-                        <div class="carousel-inner onebyone-carosel">
-                            <div class="item active">
-                                <div class="col-xs-12 col-md-6">
+                <div  class="ticker-vijesti">
+                    <ul id="ticker">
+                            <li class="item">
                                     <a class="link-novosti" href="#">
                                         <span class="kategorija-novosti">
                                                 VIJESTI / SVIJET:
                                             </span>
                                         <span class="naslov-novosti">
-                                                Lorem ipsum dolor sit amet, consecur egestas quis; 
+                                                Lorem ipsum dolor sit amet, consecur egestas quis. Lorem ipsum dolor sit amet, consecur egestas quis. 
                                             </span>
                                     </a>
-                                </div>
-                            </div>
-                            <div class="item">
-                                <div class="col-md-6">
+                            </li>
+                            <li class="item">
                                     <a class="link-novosti" href="#">
                                         <span class="kategorija-novosti">
                                                 LIČNOSTI / svijet:
@@ -444,10 +438,8 @@
                                                 Lorem ipsum dolor sit amet, consecur egestas quis; 
                                             </span>
                                     </a>
-                                </div>
-                            </div>
-                            <div class="item">
-                                <div class="col-md-6">
+                            </li>
+                            <li class="item">
                                     <a class="link-novosti" href="#">
                                         <span class="kategorija-novosti">
                                                 LIČNOSTI / svijet:
@@ -456,10 +448,8 @@
                                                 Lorem ipsum dolor sit amet, consecur egestas quis; 
                                             </span>
                                     </a>
-                                </div>
-                            </div>
-                            <div class="item">
-                                <div class="col-md-6">
+                            </li>
+                            <li class="item">
                                     <a class="link-novosti" href="#">
                                         <span class="kategorija-novosti">
                                                 VIJESTI / SVIJET:
@@ -468,13 +458,12 @@
                                                 Lorem ipsum dolor sit amet, consecur egestas quis; 
                                             </span>
                                     </a>
-                                </div>
-                            </div>
+                            </li>
 
-                        </div>
-                    </div>
+                    </ul>   
+                   
                 </div>
-                <div class="next-label"><a id="dalje"><i class="fa fa-angle-double-right" aria-hidden="true"></i></a></div>
+              <!--  <div class="next-label"><a id="dalje"><i class="fa fa-angle-double-right" aria-hidden="true"></i></a></div>  -->
             </div>
             <!-- Kraj skrolera -->
 
@@ -1597,6 +1586,7 @@
     <script src="./js/ie10-viewport-bug-workaround.js"></script>
     <script src="./js/imagesLoaded.js"></script>
     <script src="./js/masonry.js"></script>
+    <script src="./js/ticker.js"></script>
     <script src="./js/main.js"></script>
 </body>
 
