Returned continue button

--- a/potkategorije.html
+++ b/potkategorije.html
@@ -463,7 +463,7 @@
                     </ul>   
                    
                 </div>
-              <!--  <div class="next-label"><a id="dalje"><i class="fa fa-angle-double-right" aria-hidden="true"></i></a></div>  -->
+              <div class="next-label"><a id="dalje"><i class="fa fa-angle-double-right" aria-hidden="true"></i></a></div>  
             </div>
             <!-- Kraj skrolera -->
 
