Made content-independent show more/less switch

--- a/tenderi-single.html
+++ b/tenderi-single.html
@@ -352,7 +352,7 @@
                             <i class="fa fa-bookmark" aria-hidden="true"></i>
                             </span>
                             <div class="separator"></div>
-                            <p class="sadrzajVijesti">
+                            <p class="sadrzajVijesti manjeTeksta">
                                 <b id="datumObjave">Datum objave : 1.07.2017.</b>
                                 <br>
                                 <b id="naslovObjave">Obavještenje o nabavci</b>
@@ -386,7 +386,7 @@
                                 <br><br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In nec cursus lacus. Maecenas sagittis est purus, vel porta arcu posuere sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus dictum
                                 dolor, id suscipit erat lacinia ut. Cras et lorem at diam egestas condimentum. Morbi odio mauris, interdum a mauris quis, accumsan tristique nisl. Phasellus sed imperdiet dui.
                             </p>
-                            <p class="tekstSwitch"><span id="prikaziViseManje">PRIKAŽI VIŠE TEKSTA <i class="fa fa-angle-double-down" aria-hidden="true"></i></span></p>
+                            <p class="tekstSwitch"><span id="prikaziViseManje" class="shadeOn">PRIKAŽI VIŠE TEKSTA <i class="fa fa-angle-double-down" aria-hidden="true"></i></span></p>
                             <div class="separator"></div>
                             <span class="preuzmiDoc tenderi">PREUZMI DOKUMENT:</span>
                             <a id="preuzimanjeDokumenta" class="docDownload">nazivdokumenta.pdf</a>
