--- a/index.html
+++ b/index.html
@@ -86,29 +86,68 @@
                     </ul>
                     <ul class="nav navbar-nav user_menu">
                         <li>
-                            <a href="#" class="person-ico">
+                            <a href="#" class="person-ico open-login-box">
                                 <svg version="1.2" baseProfile="tiny" id="user_icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 20.5 20.5" xml:space="preserve">
-                            <g>
-                            <g>
-                              <path fill="#FFFFFF" d="M12.8,12.6c1.4-0.9,2.3-2.4,2.3-4.2c0-2.7-2.2-4.9-4.9-4.9c-2.7,0-4.9,2.2-4.9,4.9c0,1.8,0.9,3.3,2.3,4.2
-                                c-2,0.7-3.6,2.3-4.3,4.2c-0.2,0.5,0.8,1.4,0.8,1.4c0.6-2.8,3.1-4.9,6.1-4.9c3,0,5.5,2.1,6.1,4.9c0,0,1-0.9,0.8-1.4
-                                C16.4,14.9,14.8,13.3,12.8,12.6L12.8,12.6z M6.6,8.5c0-2,1.7-3.7,3.7-3.7c2,0,3.7,1.7,3.7,3.7c0,2-1.7,3.7-3.7,3.7
-                                C8.2,12.1,6.6,10.5,6.6,8.5L6.6,8.5z M6.6,8.5"/>
-                            </g>
-                            <path fill="#FFFFFF" d="M10.3,20.5C4.6,20.5,0,15.9,0,10.3C0,4.6,4.6,0,10.3,0c5.7,0,10.3,4.6,10.3,10.3
-                              C20.5,15.9,15.9,20.5,10.3,20.5z M10.3,1.1c-5.1,0-9.2,4.1-9.2,9.2c0,5.1,4.1,9.2,9.2,9.2c5.1,0,9.2-4.1,9.2-9.2
-                              C19.4,5.2,15.3,1.1,10.3,1.1z"/>
-                            </g>
-                          </svg>
+                                    <g>
+                                    <g>
+                                    <path fill="#FFFFFF" d="M12.8,12.6c1.4-0.9,2.3-2.4,2.3-4.2c0-2.7-2.2-4.9-4.9-4.9c-2.7,0-4.9,2.2-4.9,4.9c0,1.8,0.9,3.3,2.3,4.2
+                                        c-2,0.7-3.6,2.3-4.3,4.2c-0.2,0.5,0.8,1.4,0.8,1.4c0.6-2.8,3.1-4.9,6.1-4.9c3,0,5.5,2.1,6.1,4.9c0,0,1-0.9,0.8-1.4
+                                        C16.4,14.9,14.8,13.3,12.8,12.6L12.8,12.6z M6.6,8.5c0-2,1.7-3.7,3.7-3.7c2,0,3.7,1.7,3.7,3.7c0,2-1.7,3.7-3.7,3.7
+                                        C8.2,12.1,6.6,10.5,6.6,8.5L6.6,8.5z M6.6,8.5"/>
+                                    </g>
+                                    <path fill="#FFFFFF" d="M10.3,20.5C4.6,20.5,0,15.9,0,10.3C0,4.6,4.6,0,10.3,0c5.7,0,10.3,4.6,10.3,10.3
+                                    C20.5,15.9,15.9,20.5,10.3,20.5z M10.3,1.1c-5.1,0-9.2,4.1-9.2,9.2c0,5.1,4.1,9.2,9.2,9.2c5.1,0,9.2-4.1,9.2-9.2
+                                    C19.4,5.2,15.3,1.1,10.3,1.1z"/>
+                                    </g>
+                                </svg>
                             </a>
                         </li>
-                        <li><a href="#">Prijava</a></li>
+                        <!-- Link sa klasom open-login-box otvara polje sa login podacima -->
+                        <li><a href="#" class="open-login-box">Prijava</a></li>
                         <li><a href="#">Testiraj besplatno</a></li>
                     </ul>
                 </div>
                 <!--/.nav-collapse -->
             </div>
         </nav>
+        <div class="container-fluid user-menu-box" data-spy="affix" data-offset-top="435">
+            <div class="container">
+                <div class="nav">
+                        <li>
+                            <a href="#" class="person-ico hidden-xs">
+                                <svg version="1.2" baseProfile="tiny" id="user_icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 20.5 20.5" xml:space="preserve">
+                                    <g>
+                                    <g>
+                                    <path fill="#FFFFFF" d="M12.8,12.6c1.4-0.9,2.3-2.4,2.3-4.2c0-2.7-2.2-4.9-4.9-4.9c-2.7,0-4.9,2.2-4.9,4.9c0,1.8,0.9,3.3,2.3,4.2
+                                        c-2,0.7-3.6,2.3-4.3,4.2c-0.2,0.5,0.8,1.4,0.8,1.4c0.6-2.8,3.1-4.9,6.1-4.9c3,0,5.5,2.1,6.1,4.9c0,0,1-0.9,0.8-1.4
+                                        C16.4,14.9,14.8,13.3,12.8,12.6L12.8,12.6z M6.6,8.5c0-2,1.7-3.7,3.7-3.7c2,0,3.7,1.7,3.7,3.7c0,2-1.7,3.7-3.7,3.7
+                                        C8.2,12.1,6.6,10.5,6.6,8.5L6.6,8.5z M6.6,8.5"/>
+                                    </g>
+                                    <path fill="#FFFFFF" d="M10.3,20.5C4.6,20.5,0,15.9,0,10.3C0,4.6,4.6,0,10.3,0c5.7,0,10.3,4.6,10.3,10.3
+                                    C20.5,15.9,15.9,20.5,10.3,20.5z M10.3,1.1c-5.1,0-9.2,4.1-9.2,9.2c0,5.1,4.1,9.2,9.2,9.2c5.1,0,9.2-4.1,9.2-9.2
+                                    C19.4,5.2,15.3,1.1,10.3,1.1z"/>
+                                    </g>
+                                </svg>
+                            </a>
+                        </li>
+                        <li><span class="cta-label">Novi korisnik?</span></li>
+                        <li class="reg-button-li"><a class="cta-button-reg" href="#">Registruj se</a></li>
+                        <div class="col-xs-12 col-md-8 login-inputs">
+                            
+                                <input class="login-input" type="text" placeholder="E-mail..."/>
+                                <div class="inputs-wrap">
+                                    <input class="login-input" type="password" placeholder="Šifra..." />
+                                    <div class="legend-wrap">
+                                        <input type="checkbox" id="zapamtiPrijavu" name="zapamtiPrijavu" value="zapamtiPrijavu">
+                                        <label for="zapamtiPrijavu">Zapamti me</label>
+                                        <a href="#" class="forgot-pass-link">Zaboravljen</a>
+                                    </div>
+                                </div>   
+                                <button class="login-bt">PRIJAVA</button>        
+                        </div>
+                </div>
+            </div>      
+        </div>
         <div class="container-fluid bijeli-menu" data-spy="affix" data-offset-top="435">
             <div class="container">
 
@@ -130,7 +169,7 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bars" aria-hidden="true"></i></a>
 
                     <span class="search_bar">
-                        <a href="#" class="person-ico hidden-sm hidden-md hidden-lg">
+                        <a href="#" class="person-ico open-login-box hidden-sm hidden-md hidden-lg">
                                 <svg version="1.2" baseProfile="tiny" id="user_icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 20.5 20.5" xml:space="preserve">
                             <g>
                             <g>
@@ -318,7 +357,6 @@
                     </ul>
 
                 </li>
-                </ul>
 
             </div>
         </div>
