New header concept

--- a/index.html
+++ b/index.html
@@ -46,9 +46,10 @@
 
     <div class="container">
         <div class="hidden-xs visible-md visible-lg ads noborder">
-            <img class="img-responsive" src="http://placehold.it/1250x130?text=Place for ads.">
+            <img class="img-responsive" src="http://placehold.it/970x100?text=Place for ads.">
         </div>
-        <nav class="hidden-xs visible-md visible-lg upper_menu">
+    <!-- removed upper menu to reduce header height -->
+    <!--  <nav class="hidden-xs visible-md visible-lg upper_menu">
             <ul>
                 <li><a href="#" class="um_vijesti active">VIJESTI</a></li>
                 <li><a href="#" class="um_registar">REGISTAR</a></li>
@@ -57,7 +58,7 @@
                 <li><a href="#" class="um_forum">FORUM</a></li>
 
             </ul>
-        </nav>
+        </nav> -->
     </div>
     <div class="nav-wrapper">
         <nav class="navbar navbar-inverse crni-menu" data-spy="affix" data-offset-top="435">
@@ -366,6 +367,7 @@
     <section class="main_body_contents">
         <div class="container">
             <!-- Scroller vijesti -->
+            <!-- Skroler uklonjen sa početne stranice radi uštede prostora  --> <!--
             <div class="skroler-novosti-modul">
                 <div class="news-label">Najnovije</div>
                 <div id="skroler-novosti" class="carousel fdi-Carousel slide">
@@ -426,6 +428,7 @@
                 </div>
                 <div class="next-label"><a id="dalje"><i class="fa fa-angle-double-right" aria-hidden="true"></i></a></div>
             </div>
+        -->
             <!-- Kraj skrolera -->
 
             <div class="wrapper-vijesti remargin">
