Gallery image height patch.

--- a/moj-profil.html
+++ b/moj-profil.html
@@ -335,7 +335,7 @@
                                 <li><a href="#" data-target="tab-osnovnipodaci" >OSNOVNI PROFIL KORISNIKA</a></li>
                                 <li><a href="#" data-target="tab-osnovno" >OSNOVNI PROFIL FIRME</a></li>                                
                                <!-- <li><a href="#">OSNOVNI PODACI</a></li> -->
-                                <li><a href="#" data-target="tab-bilten" >BILTEN I NEWSLETTER</a></li>
+                                <li ><a href="#" class="active" data-target="tab-bilten" >BILTEN I NEWSLETTER</a></li>
                                 <li><a href="#" data-target="tab-clanci">IZDVOJENI ČLANCI</a></li>
                                 <li><a href="#" data-target="tab-tenderi">IZDVOJENI TENDERI</a></li>
                                 <li><a href="#" data-target="tab-firme">PRATI FIRME</a></li>
