Added inputs for "Praćenje firmi"

--- a/moj-profil.html
+++ b/moj-profil.html
@@ -334,7 +334,7 @@
                             <div class="profil-card opcije">
                                 <li><a href="#" data-target="tab-osnovnipodaci" >OSNOVNI PROFIL KORISNIKA</a></li>
                                 <li><a href="#" data-target="tab-osnovno" >OSNOVNI PROFIL FIRME</a></li>                                
-                               <!-- <li><a href="#">OSNOVNI PODACI</a></li> -->
+                               <!-- <li><a href="#">OSNOVNI PODAC I</a></li> -->
                                 <li ><a href="#" class="active" data-target="tab-bilten" >BILTEN I NEWSLETTER</a></li>
                                 <li><a href="#" data-target="tab-clanci">IZDVOJENI ČLANCI</a></li>
                                 <li><a href="#" data-target="tab-tenderi">IZDVOJENI TENDERI</a></li>
@@ -756,7 +756,9 @@
                         <div class="col-sm-12 col-md-12 card podaci-o-firmi tab-firme">
                                 <div class="profil-card firme">
                                     <h1 class="card-naslov-vijesti" style="color: #00827D;">Praćenje firmi</h1>
-                                    
+                                    <input type="text" class="sivi-input" placeholder="NAZIV FIRME" >
+                                    <input type="text" class="sivi-input" placeholder="ID BROJ FIRME" >
+                                    <input type="submit" class="zeleni-input" value="OSVJEŽI" >
                                     <div class="col-xs-12 nopadding">
                                             <li>
                                                 <p class="izdvojeni-firme naslov"><a href="#">Naziv firme</a> d.d Grad sjedišta.</p>                                                
